--- a/ansible/playbooks/aws-provision.yml
+++ b/ansible/playbooks/aws-provision.yml
@@ -1,9 +1,10 @@
 ---
 
-- hosts: local
+- hosts: aws
   connection: local
   gather_facts: false
   
   roles:
     - role: vpc
     - role: security-group
+    - role: ec2
