--- a/ansible/roles/ec2/tasks/main.yml
+++ b/ansible/roles/ec2/tasks/main.yml
@@ -3,17 +3,15 @@
 - name: Launching EC2 Instance
   ec2:
     key_name: "{{ keypair }}"
-    instance_type: t2.micro
+    instance_type: "{{ instance }}"
     image: "{{ image }}"
     region: "{{ aws_region }}"
     exact_count: "{{ count }}"
     wait: yes
     group: "{{ sg_name }}"
     vpc_subnet_id: "{{ minichat_subnet.subnet.id }}"
-    assign_public_ip: false
     count_tag: 
-      Name: Minichat
-    wait: yes
+      Name: "{{ server_name }}"
   register: ec2
 
 - name: Associate an elastic IP 
@@ -22,12 +20,4 @@
     region: "{{ aws_region }}"
     device_id: "{{ item }}"
   with_items: "{{ ec2.instance_ids }}"
-
-- name: Wait for SSH to come up
-  wait_for:
-    host: "{{ elastic_ip }}"
-    port: 22
-    delay: 20
-    timeout: 160
-    state: started
 
