--- a/ansible/roles/security-group/tasks/main.yml
+++ b/ansible/roles/security-group/tasks/main.yml
@@ -20,6 +20,10 @@
         from_port: 443
         to_port: 443
         cidr_ip: 0.0.0.0/0
+      - proto: icmp
+        from_port: -1
+        to_port: -1
+        cidr_ip: 0.0.0.0/0
     rules_egress:
       - proto: all
         cidr_ip: 0.0.0.0/0
